--- a/react-app/src/components/ProjectPage/UpdatesSection/UpdatesSection.css
+++ b/react-app/src/components/ProjectPage/UpdatesSection/UpdatesSection.css
@@ -3,3 +3,22 @@
   min-height: 400px;
   color: #282828;
 }
+
+.grid-container {
+  margin: 0 auto;
+  padding: 0 60px;
+  max-width: 1366px;
+}
+
+.grid-row {
+  margin: 0 -18px;
+}
+
+.grid-row::before, .grid-row::after {
+  content: " ";
+  display: table;
+}
+
+.grid-row::after {
+  clear: both;
+}
