--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -77,6 +77,10 @@ li {
   background-color: #FBFBFA;
 }
 
+.mt4 {
+  margin-top: 24px;
+}
+
 .pl2 {
   padding-left: 12px;
 }
